Fix header section alignment.

--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,10 @@
 * {
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
 body {
-    margin: 0;
-    padding: 0;
     font-family: "Lucida Console", "Courier New", monospace;
 }
 
@@ -17,7 +16,7 @@ body {
 
 .column-spacer {
     flex: 0 10 10%;
-    background-color: rgba(100, 0, 0, 0.2);
+    /* background-color: rgba(100, 0, 0, 0.2); */
 }
 
 #left-column-spacer {
@@ -28,9 +27,11 @@ body {
     order: 3;
 }
 
-.content-column {
-    background-color: #EEEEEE;
+#right-column-spacer, #left-column-spacer {
+    background-color: #700070;
+}
 
+.content-column {
     flex: 1;
     order: 2;
 
@@ -38,33 +39,94 @@ body {
     flex-direction: column;
 }
 
-.content-column > div {
-    padding: 10px 5px;
-    min-height: 1em;
+.content-column  div {
+    padding: 0 5px;
 }
 /* #endregion initial */
 
 
 /* #region header */
 .header-container {
-    background-color: white;
-    padding: 10px 0;
+    padding: 5px 0;
     display: flex;
-    justify-content: space-between;
+    justify-items: start;
+    align-content: end;
     position: sticky;
     top: 0px;
+    min-height: 2em;
+    /* gap: 20px; */
+    
+    /* justify-content: space-between; */
+    /* border:1px solid green; */
+    border-bottom: 1px solid black;
+    background-color: #EEEEEE;
 }
 
-.header-text {
-    text-align: bottom;
+.header-title {
+    display: flex;
+    gap: 0.5em;
     font-size: 3em;
+    /* justify-content: space-between; */
+    align-items:center;
+    /* border: 0px solid blue; */
+}
+
+#profile-picture {  
+    display: block;
+    border-radius: 50%;
+    min-height: 1em;
+    max-height: 100%;
+    max-width: auto;
+    /* border: 1px solid orange; */
+}
+
+.header-title p {
+    max-height: 2em;
+    font-size: 1em;
+    position:relative;
+    bottom:0;
+    /* border: 0px solid black;
+    background-color: #AAAAAA; */
 }
 
 .all-logos-container {
-    font-size: 1em;
+    font-size: inherit;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: end;
+    border: 1px solid blue;
+    margin: 0 40px;
+}
+
+/* .all-logos-container ul {
+    list-style-type: circle;
+}
+
+.all-logos-container > li.item-github {
+    list-style-image: url('images/logo_github.png');
+}
+
+.all-logos-container > li.item-linkedin {
+    list-style-image: url('images/logo_linkedin.png');
+} */
+
+.all-logos-container .logo-github {
+    background-image:url("./images/logo_github.png");
+    background-repeat: no-repeat;
+    background-size: 1em;
+    width: 1em;
+    height: 1em;
+    border: 0;
+}
+
+.all-logos-container .logo-linkedin {
+    background-image:url("./images/logo_linkedin.png");
+    background-repeat: no-repeat;
+    background-size: 1em;
+    width: 1em;
+    height: 1em;
+    border: 0;
 }
 
 .logo-container {
@@ -84,15 +146,26 @@ body {
 
 /* #region main-content */
 .main-content {
-    padding: 10px 0;
+    padding: 0 0 10px 0;
+    margin-top: 30px;
     flex-basis: 100%;
 }
+
+div.links {
+    display: flex;
+    background-color: #DDDDDD;
+}
+
+div.links span {
+    min-width: 10%;
+    background-color: orange;
+}
+
 /* #endregion main-content */
 
 
 /* #region footer */
 .footer {
-    min-height: 1em;
     background-color: #333333;
     text-align: center;
     display: flex;
@@ -100,5 +173,6 @@ body {
     align-items: center;
     color: white;
     font-size: 0.75em;
+    padding: 10px 0;
 }
 /* #endregion footer */
